KB-KB-11791| BE| TECHDEBT| JUnit test cases to improve the code coverage for the cb-community-service (#100)
* Resolved blocker issues

* Resolved blocker issues

* Resolved critical issues

* KB-11768| BE| TECHDEBT| JUnit test cases to improve the code coverage for the cb-comment-service

* KB-11768| BE| TECHDEBT| JUnit test cases to improve the code coverage for the cb-comment-service

* KB-11768| BE| TECHDEBT| JUnit test cases to improve the code coverage for the cb-comment-service

* KB-11768| BE| TECHDEBT| JUnit test cases to improve the code coverage for the cb-comment-service

* KB-11768| BE| TECHDEBT| JUnit test cases to improve the code coverage for the cb-comment-service

* KB-11768| BE| TECHDEBT| JUnit test cases to improve the code coverage for the cb-comment-service

* KB-KB-11791| BE| TECHDEBT| JUnit test cases to improve the code coverage for the cb-community-service